--- a/index.html
+++ b/index.html
@@ -9,50 +9,44 @@
     <h1>Angelina Macedo</h1>
     <h2>Web Developer</h2>
     <hr>
-    <section>
-        <h3>Summary</h3>
+    <h3>Summary</h3>
         <p>
             Aspiring Software Developer looking to strengthen my skills within a challenging organization.
         </p>
-    </section>
     <hr>
-    <section>
-        <h3>Education</h3>
+    <h3>Education</h3>
         <ul>
             <li><strong>Data Analytics Certificate</strong>, UC Berkeley Extention, February 2023</li>
             <li><strong>Bachelors of Science, Business Administration</strong>, Notre Dame De Namur University | Class of 2022</li>
         </ul>
-    </section>
     <hr>
-    <section>
-        <h3>Skills</h3>
+    <h3>Skills</h3>
         <ul>
             <li></li>
             <li></li>
             <li></li>
         </ul>
-    </section>
     <hr>
-    <section>
-        <h3>Work Experience</h3>
+    <h3>Work Experience</h3>
         <ul>
-            <li><strong>Business Manager</strong>, Macedo Transport, LLC <br>
-                2016 - Present</li>
+            <li><strong>Business Manager</strong>, Macedo Transport, LLC</li>
+            <p>2016 - Present</p>
                 <ul>
                     <li>Ensure operations and transportation permits remain compliant with the law and DOT regulations</li>
                     <li>Maintain planning and interpersonal communication with owner-operator and contractors</li>
                     <li>Responsible for budget preparation and financial decisions</li>
                     <li>Monitor time management and performance</li>
                 </ul>
-            <li><strong>Financial Administrator</strong>, CU Financial Partners LLC <br>
-                2010 to 2013</li>
+                <br>
+            <li><strong>Financial Administrator</strong>, CU Financial Partners LLC</li>
+            <p>2010 to 2013</p>
                 <ul>
                     <li></li>
                     <li></li>
                     <li></li>
                 </ul>
         </ul>
-    </section>
+    
     <hr>
     <a href="./contactme.html">Contact Me</a>
 </body>
