--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <hr>
     <h3>Education</h3>
         <ul>
-            <li><strong>Data Analytics Certificate</strong>, UC Berkeley Extention, February 2023</li>
-            <li><strong>Bachelors of Science, Business Administration</strong>, Notre Dame De Namur University | Class of 2022</li>
+            <li><strong>Data Analytics Certificate</strong> <br>
+                UC Berkeley Extention, February 2023</li>
+                <br>
+            <li><strong>Bachelors of Science, Business Administration</strong> <br>
+                Notre Dame De Namur University | Class of 2022</li>
         </ul>
     <hr>
     <h3>Skills</h3>
