Updated Index.html and added hobbie.html

--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 <body>
     <h1>Angelina Macedo</h1>
     <h2>Web Developer</h2>
+    <p><strong>Cell:</strong> (408) 500-6000 | <strong>Email:</strong> macedo6000@gmail.com</p>
+    <p><a href="https://www.linkedin.com/in/angie-macedo/">LinkedIn</a> | <a href="https://github.com/macedo6000">GitHub</a></p>
     <hr>
     <h3>Summary</h3>
         <p>
-            Aspiring Software Developer looking to strengthen my skills within a challenging organization.
+            Highly motivated individual eager to take on a new and exciting opportunity to further challenge and expand newly acquired web developer skills. 
         </p>
     <hr>
     <h3>Education</h3>
         <ul>
+            <li><strong>Complete 2023 Web Development Bootcamp</strong> <br>
+                Udemy, 2023</li>
+                <br>
             <li><strong>Data Analytics Certificate</strong> <br>
                 UC Berkeley Extention, February 2023</li>
                 <br>
@@ -23,18 +28,13 @@
                 Notre Dame De Namur University | Class of 2022</li>
         </ul>
     <hr>
-    <h3>Certificates</h3>
-        <ul>
-            <li><strong>Complete 2023 Web Development Bootcamp</strong> <br>
-                Udemy, 2023</li>
-        </ul>
-    <hr>
-    
     <h3>Skills</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><strong>Computer Languages:</strong> Python, CSS/HTML, JavaScript, SQL</li>
+            <br>
+            <li><strong>Databases:</strong> PostgreSQL, MySQL, Microsoft Access</li>
+            <br>
+            <li><strong>Software Tools:</strong> Google Docs, Microsoft Office Suite</li>
         </ul>
     <hr>
     <h3>Work Experience</h3>
@@ -42,7 +42,7 @@
             <li><strong>Business Manager</strong>, Macedo Transport, LLC</li>
             <p>2016 - Present</p>
                 <ul>
-                    <li>Ensure operations and transportation permits remain compliant with the law and DOT regulations</li>
+                    <li>Ensure operations and transportation permits remain compliant with State/Local laws and DOT regulations</li>
                     <li>Maintain planning and interpersonal communication with owner-operator and contractors</li>
                     <li>Responsible for budget preparation and financial decisions</li>
                     <li>Monitor time management and performance</li>
@@ -51,9 +51,10 @@
             <li><strong>Financial Administrator</strong>, CU Financial Partners LLC</li>
             <p>2010 to 2013</p>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>Provided administrative support to five Financial Advisors</li>
+                    <li>Boasts 95% success rate of schedule meetings through warm calling prospects</li>
+                    <li>Managed calendar and time management</li>
+                    <li>Coordinated meetings with clients to follow-up and finalize financial accounts</li>
                 </ul>
         </ul>
         </ul>
@@ -62,6 +63,8 @@
     
     <hr>
     <a href="./contactme.html">Contact Me</a>
+    <br>
+    <a href="./hobbies.html">Hobbies</a>
     <hr>
     <footer>
         © 2023 Angelina Macedo. All rights reserved.
