--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <h1>Angelina Macedo</h1>
     <h2>Web Developer</h2>
-    <p><strong>Cell:</strong> (408) 500-6000 | <strong>Email:</strong> macedo6000@gmail.com</p>
-    <p><a href="https://www.linkedin.com/in/angie-macedo/">LinkedIn</a> | <a href="https://github.com/macedo6000">GitHub</a></p>
+    <p><strong>Cell:</strong> (408) 500-6000 | <strong>Email:</strong> macedo6000@gmail.com <br>
+        <a href="https://www.linkedin.com/in/angie-macedo/">LinkedIn</a> | <a href="https://github.com/macedo6000">GitHub</a></p>
     <hr>
     <h3>Summary</h3>
         <p>
