Updated and added files.

--- a/index.html
+++ b/index.html
@@ -7,25 +7,33 @@
 </head>
 <body>
     <h1>Angelina Macedo</h1>
-    <h2>Web Developer</h2>
-    <p><strong>Cell:</strong> (408) 500-6000 | <strong>Email:</strong> macedo6000@gmail.com <br>
-        <a href="https://www.linkedin.com/in/angie-macedo/">LinkedIn</a> | <a href="https://github.com/macedo6000">GitHub</a></p>
+    <img src="./Resources/ResumePix.png" height="125">
+    <h2>Data Scientist</h2>
+    <p>
+        <strong>Cell:</strong> (408) 500-XXXX | <strong>Email:</strong> fake_email@gmail.com <br>
+        <a href="https://www.linkedin.com/in/angie-macedo/">LinkedIn</a> | 
+        <a href="https://github.com/macedo6000">GitHub</a>
+    </p>
     <hr>
     <h3>Summary</h3>
         <p>
-            Highly motivated individual eager to take on a new and exciting opportunity to further challenge and expand newly acquired web developer skills. 
+            Aspiring Data Scientist eager to take on a new and exciting 
+            opportunity to further challenge and expand newly acquired 
+            technical skills. Recently received a Data Analytics 
+            certificate, completing an intensive six-month bootcamp with 
+            an innovative curriculum focused on Data Visualization and 
+            Modeling, and Front-End Web Visualization. Also, possess 
+            Bachelor of Science in Business Administration from 
+            Notre Dame De Namur University. 
         </p>
     <hr>
     <h3>Education</h3>
         <ul>
-            <li><strong>Complete 2023 Web Development Bootcamp</strong> <br>
-                Udemy, 2023</li>
+            <li><strong>Complete 2023 Web Development Bootcamp</strong> - Udemy (2023)</li>
                 <br>
-            <li><strong>Data Analytics Certificate</strong> <br>
-                UC Berkeley Extention, February 2023</li>
+            <li><strong>Data Analytics Certificate</strong> - UC Berkeley Extention (Feb 2023)</li>
                 <br>
-            <li><strong>Bachelors of Science, Business Administration</strong> <br>
-                Notre Dame De Namur University | Class of 2022</li>
+            <li><strong>Bachelor of Science, Business Administration</strong> - Notre Dame De Namur University (2022)</li>
         </ul>
     <hr>
     <h3>Skills</h3>
@@ -39,7 +47,7 @@
     <hr>
     <h3>Work Experience</h3>
         <ul>
-            <li><strong>Business Manager</strong>, Macedo Transport, LLC</li>
+            <li><strong>Business Manager - Macedo Transport, LLC</strong></li>
             <p>2016 - Present</p>
                 <ul>
                     <li>Ensure operations and transportation permits remain compliant with State/Local laws and DOT regulations</li>
@@ -48,7 +56,7 @@
                     <li>Monitor time management and performance</li>
                 </ul>
                 <br>
-            <li><strong>Financial Administrator</strong>, CU Financial Partners LLC</li>
+            <li><strong>Financial Administrator - CU Financial Partners LLC</strong></li>
             <p>2010 to 2013</p>
                 <ul>
                     <li>Provided administrative support to five Financial Advisors</li>
