--- a/contactme.html
+++ b/contactme.html
@@ -2,7 +2,7 @@
 
 <ul>
     <li><strong>Address: </strong>Tracy, CA</li>
-    <li><strong>Cell Phone:</strong> (408) 500-6000</li>
-    <li><strong>Email:</strong> macedo6000@gmail.com</li>
+    <li><strong>Cell Phone:</strong> (408) 500-XXXX</li>
+    <li><strong>Email:</strong> fake_email@gmail.com</li>
     <li><a href="https://www.linkedin.com/in/angie-macedo/"><img src="./Resources/linkedIn.jpg" height=20></a></li>
 </ul>
