--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Angelina Macedo</h1>
     <img src="./Resources/ResumePix.png" height="125">
-    <h2>Data Scientist</h2>
+    <h2>Data Analyst</h2>
     <p>
         <strong>Cell:</strong> (408) 500-XXXX | <strong>Email:</strong> fake_email@gmail.com <br>
         <a href="https://www.linkedin.com/in/angie-macedo/">LinkedIn</a> | 
@@ -17,32 +17,30 @@
     <hr>
     <h3>Summary</h3>
         <p>
-            Aspiring Data Scientist eager to take on a new and exciting 
+            Aspiring Data Analyst eager to take on a new and exciting 
             opportunity to further challenge and expand newly acquired 
             technical skills. Recently received a Data Analytics 
             certificate, completing an intensive six-month bootcamp with 
             an innovative curriculum focused on Data Visualization and 
-            Modeling, and Front-End Web Visualization. Also, possess 
-            Bachelor of Science in Business Administration from 
-            Notre Dame De Namur University. 
+            Modeling, and Front-End Web Visualization.
         </p>
+    <hr>
+    <h3>Skills</h3>
+        <ul>
+            <li><strong>Computer Languages:</strong> Python (NumPy, Pandas, Matplotlib, API Interaction), Front End Web Developing (CSS, HTML, JavaScript, Bootstrap, Geomapping with Leaflet.js)</li>
+            <br>
+            <li><strong>Databases:</strong> PostgreSQL, ETL</li>
+            <br>
+            <li><strong>Software Tools:</strong> Excel (Pivot Tables & VBA Scripting), Tableau</li>
+        </ul>
     <hr>
     <h3>Education</h3>
         <ul>
-            <li><strong>Complete 2023 Web Development Bootcamp</strong> - Udemy (2023)</li>
+            <li><strong>Complete 2023 Web Development Bootcamp</strong> - Udemy (In progress)</li>
                 <br>
             <li><strong>Data Analytics Certificate</strong> - UC Berkeley Extention (Feb 2023)</li>
                 <br>
             <li><strong>Bachelor of Science, Business Administration</strong> - Notre Dame De Namur University (2022)</li>
-        </ul>
-    <hr>
-    <h3>Skills</h3>
-        <ul>
-            <li><strong>Computer Languages:</strong> Python, CSS/HTML, JavaScript, SQL</li>
-            <br>
-            <li><strong>Databases:</strong> PostgreSQL, MySQL, Microsoft Access</li>
-            <br>
-            <li><strong>Software Tools:</strong> Google Docs, Microsoft Office Suite</li>
         </ul>
     <hr>
     <h3>Work Experience</h3>
